Fix banner not showing on mobile

--- a/scss/cssclasses/_banner.scss
+++ b/scss/cssclasses/_banner.scss
@@ -46,6 +46,8 @@ body {
 .markdown-preview-view.banner {
     --inline-title-margin-bottom: 0;
 
+    isolation: isolate;
+
     #{$img-embed-sel} {
         top: 0;
         left: 0;
